# datateal

./: .editorconfig  .gitattributes  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CONTRIBUTING.md  README.md  ruff.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json  setup-appsettings.sh
.githooks/: commit-msg
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/instructions/: control-plane.instructions.md  orchestrator.instructions.md  runtime.instructions.md  ui.instructions.md
.github/workflows/: pre-commit.yml
src/: .gitignore  Directory.Build.props  Directory.Packages.props  DuckHouse.slnx
src/app-host/DuckHouse.AppHost/: AppHost.cs  DuckHouse.AppHost.csproj
src/control-plane/: AGENTS.md  Directory.Packages.props  README.md
src/control-plane/Datateal.ControlPlane.Application/: ServiceExtensions.cs
src/control-plane/Datateal.ControlPlane.Infrastructure/: ServiceExtensions.cs
src/infra/: main.bicep  main.bicepparam
src/orchestrator/: AGENTS.md  README.md
src/runtime/: .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
src/runtime/datateal_runtime/: main.py
src/runtime/datateal_runtime/api/: kernels.py
src/runtime/datateal_runtime/kernels/: dataframe_formatter.py  manager.py  models.py
src/runtime/docker/: entrypoint.sh
src/runtime/duckhouse_runtime/: main.py
src/runtime/duckhouse_runtime/api/: kernels.py
src/runtime/duckhouse_runtime/kernels/: manager.py  models.py
src/runtime/sample_requests/: kernels.http
src/runtime/tests/: test_language_features.py
src/ui/: AGENTS.md  README.md
(+633 files in other folders)
