[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "duckhouse-runtime"
version = "2026.0.1"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.0.0",
  "jupyter-client>=8.0.0",
  "ipykernel>=6.0.0",
]

[project.scripts]
duckhouse = "duckhouse_runtime.main:run"