[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "datateal-runtime"
version = "2026.0.1"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.136.0",
  "uvicorn[standard]==0.44.0",
  "pydantic==2.13.2",
  "jupyter-client==8.8.0",
  "ipykernel==7.2.0",
  "jedi==0.19.2",
  "pyflakes==3.4.0",
]

[tool.setuptools.packages.find]
include = ["datateal_runtime*"]

[project.scripts]
datateal-runtime = "datateal_runtime.main:run"

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
